--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Unicorn.TAF
 url: "https://unicorn-taf.github.io"
 baseurl: /docs
-google_analytics_key: G-R82HWQMSP3
+google_analytics_id: G-R82HWQMSP3
 show_full_navigation: false
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
